--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <body>
 <div id="googleMap" style="width:500px;height:380px;"></div>
 </body>
-
+ <h1>Hello there</h1>
 </html> 
