--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 <body>
 <div id="googleMap" style="width:500px;height:380px;"></div>
+ <h1>Hello</h1>
 </body>
- <h1>Hello there</h1>
+ 
 </html> 
