--- a/Hello.html
+++ b/Hello.html
@@ -1,1 +1,18 @@
-<h1>Hello</h1>
+<html>
+<body>
+<p>Click the "Try it" button to get the text in the text field.</p>
+<input type="text" id="myText" value=""><br>
+<button onclick="myFunction()">Try it</button>
+<p id="demo"></p>
+<p id="demo"></p>
+<script>
+function myFunction() {
+  var x = document.getElementById("myText").value;
+  var y = document.getElementById("demo").innerHTML;
+  var d = new Date();
+  document.getElementById("demo").innerHTML = y + '<br>' + d.toLocaleString() + " " + x;
+}
+</script>
+
+</body>
+</html>
