--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>Hello!</p>
-<img src="images\charts.png" alt="Performance Chart" width="896" height="533">
+<img src="images\Charts.png" alt="Performance Chart" width="896" height="533">
 <p>Click the "Try it" button to get the text in the text field.</p>
 <input type="text" id="myText" value=""><br>
 <button onclick="myFunction()">Try it</button>
